Project and collaborators integration in dev successful... Debugging for prod

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,11 +61,11 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
- @apply bg-gray-100 rounded;
+ @apply rounded;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
- background-color: var(--accent);
+ background-color: var(--foreground);
   border-radius: 0.25rem;
 }
 
