projects page first implementation and correction

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,7 +137,7 @@ h6 {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: var(--foreground);
+  background-color: var(--accent);
   border-radius: 0.25rem;
   opacity: 0
 }
